added emoji and files in chat and email verification

--- a/gamehaven/backend/.gitignore
+++ b/gamehaven/backend/.gitignore
@@ -28,3 +28,7 @@
 ###< lexik/jwt-authentication-bundle ###
 
 /public/uploads/
+
+# Uploaded files
+/public/uploads/chat/*
+!/public/uploads/chat/.gitkeep
