--- a/gamehaven/backend/config/services.yaml
+++ b/gamehaven/backend/config/services.yaml
@@ -6,6 +6,7 @@
 parameters:
     avatar_directory: '%kernel.project_dir%/public/uploads/avatars'
     game_images_directory: '%kernel.project_dir%/public/uploads/games'
+    chat_files_directory: '%kernel.project_dir%/public/uploads/chat'
 
 services:
     # default configuration for services in *this* file
